--- a/views/index scratch 2.html
+++ b/views/index scratch 2.html
@@ -4,14 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>IntelliCon 2.0</title>
-        <link rel="stylesheet" href="style scratch 2.css" />
+        <link rel="stylesheet" href="../public/style scratch 2.css" />
     </head>
     <body>
         <div class="container">
             <div class="header">
                 <div class="header-logo">
                     <a class="navbar-brand" href="index.html">
-                        <img src="images/IntelliCon Logo1.png" alt="Logo" />
+                        <img
+                            src="../public/images/IntelliCon Logo1.png"
+                            alt="Logo"
+                        />
                     </a>
                 </div>
                 <div class="header-items">
