--- a/public/style scratch 2.css
+++ b/public/style scratch 2.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("images/HAND11.jpeg");
+    background-image: url("./images/HAND11.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
 }
