--- a/views/index scratch 2.html
+++ b/views/index scratch 2.html
@@ -28,21 +28,7 @@
                     <button class="header-register-btn">Register Now</button>
                 </div>
             </div>
-            <div class="content">
-                <!-- Main text Intellicon -->
-<div class="you">
-    <div class="text" data-text="INTELLICON 2.0"> 
-      INTELLICON 2.0
-    </div>
-    <div class="passage">
-      <p>
-      WHERE HUMANS MEET AI
-      </p>
-    </div>
-    </p>
-  </div>
-  <!-- end main text intellicon -->
-            </div>
+            <div class="content"></div>
         </div>
     </body>
 </html>
