--- a/public/style scratch 2.css
+++ b/public/style scratch 2.css
@@ -28,8 +28,21 @@ body {
     display: inline-flex;
     margin-left: 25px;
     margin-right: 25px;
+    cursor: pointer;
+    transition: background-color 0.5s;
+    height: 25px;
+    width: 95px;
+    align-items: center;
+    justify-content: center;
+    border-bottom: solid 1.5px rgba(69, 29, 29, 0);
+    border-top: solid 1.5px rgba(169, 29, 29, 0);
 }
 
+.header-item:hover {
+    border-bottom: solid 1.5px;
+    border-top: solid 1.5px;
+    background-color: #41b7db;
+}
 .header-items {
     width: auto;
     display: inline-flex;
