--- a/views/index scratch 2.html
+++ b/views/index scratch 2.html
@@ -28,7 +28,9 @@
                     <button class="header-register-btn">Register Now</button>
                 </div>
             </div>
-            <div class="content"></div>
+            <div class="content">
+                <div class="content-topic">timeline 2.0</div>
+            </div>
         </div>
     </body>
 </html>
