--- a/public/register.css
+++ b/public/register.css
@@ -1,9 +1,6 @@
 body {
     user-select: none;
-    background-image: url("../public/background.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: Roboto;
+    font-family: Ubuntu;
 }
 
 .form-container {
@@ -15,14 +12,23 @@ body {
 
 input {
     height: 30px;
-    border-radius: 6px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    padding: 0;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-top: 6px;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
+    transition: box-shadow 0.5s;
 }
 
-.form {
+input:focus {
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+}
+
+.form-final {
     display: grid;
-    width: 40%;
     grid-template-areas:
+        "logo logo"
         "text-register text-register"
         "form-item-fname form-item-lname"
         "form-item-email form-item-email"
@@ -30,9 +36,10 @@ input {
         "form-item-contact form-item-contact"
         "form-item-address form-item-address"
         "btn-submit-container btn-submit-container";
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
-    background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 6px;
+    grid-template-rows: 1.2fr 1.5fr 1.2fr 1.2fr 1.2fr 1.2fr 1.2fr 1.5fr;
+    width: 390px;
+    height: 100%;
+    /* border: solid 1px; */
 }
 
 .form-item-fname {
@@ -63,39 +70,43 @@ input {
     grid-area: form-item-address;
 }
 
+.logo {
+    grid-area: logo;
+}
+.form-item-fname {
+    margin-right: 40px;
+}
 .form-item-fname,
 .form-item-lname,
 .form-item-category,
 .form-item-institute {
-    margin: 5px;
+    font-size: 13px;
 }
 
 .form-item-email,
 .form-item-contact,
 .form-item-address {
-    margin: 5px;
+    font-size: 13px;
 }
 
 .text-register {
     grid-area: text-register;
-    text-align: center;
     font-size: 30px;
     font-weight: bold;
+    height: auto;
 }
 
 .btn-submit-container {
     grid-area: btn-submit-container;
-    display: flex;
-    justify-content: center;
 }
 
 .btn-submit {
     border: none;
-    height: 35px;
-    width: 200px;
-    border-radius: 6px;
-    font-family: Roboto;
-    margin: 5px;
+    font-family: Ubuntu;
+    padding: 8px 70px;
+    background-color: rgb(43, 43, 128);
+    color: white;
+    cursor: pointer;
 }
 
 .input-full,
@@ -106,4 +117,55 @@ input {
 .input-full:focus,
 .input-half:focus {
     outline: none;
+}
+
+.form-strip {
+    grid-area: form-strip;
+    width: 35px;
+    height: 550px;
+    background-color: rgb(228, 209, 34);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.form-left {
+    grid-area: form-left;
+    width: 430px;
+}
+
+.form {
+    display: grid;
+    place-items: center;
+    grid-area: form;
+    width: 530px;
+    height: 550px;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
+    background-color: rgb(228, 209, 34);
+    margin-right: 26px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.form-space {
+    display: grid;
+    grid-template-areas: "form-strip form-left form";
+    background-color: rgb(43, 43, 128);
+    height: 600px;
+    place-items: center;
+}
+
+.cat {
+    font-family: Ubuntu;
+    background-color: white;
+    border: none;
+    margin-top: 6px;
+    height: 30px;
+}
+
+.cat:focus {
+    background-color: white;
+    border: none;
+    outline: none;
+}
+
+.cat:hover {
+    border: none;
 }
