--- a/views/index scratch 2.html
+++ b/views/index scratch 2.html
@@ -10,10 +10,7 @@
         <div class="header">
             <div class="header-logo">
                 <a class="navbar-brand" href="index.html">
-                    <img
-                        src="../public/images/IntelliCon Logo1.png"
-                        alt="Logo"
-                    />
+                    <img src="../public/images/IntelliCon Logo1.png" alt="Logo">
                 </a>
             </div>
             <div class="header-items">
@@ -28,8 +25,84 @@
             </div>
         </div>
         <div class="content"></div>
-        <div class="timeline">timeline 2.0</div>
+        <div class="timeline">timeline 2.0
+            <div class="timeline-container left-container">
+                <img src="../public/images/silver.png" >
+                <div class="text-box">
+                    <h2>DAY 1</h2>
+                    <small>May 31</small>
+                    <p>a book or other written or printed work, regarded in terms of its content rather than its physical form.</p>
+                </div>
+            </div>
+            <div class="timeline-container right-container">
+                <img src="../public/images/silver.png" >
+                <div class="text-box">
+                    <h2>DAY 2</h2>
+                    <small>July 1</small>
+                    <p>a book or other written or printed work, regarded in terms of its content rather than its physical form.</p>
+                </div>
+            </div>
+            <div class="timeline-container left-container">
+                <img src="../public/images/silver.png" >
+                <div class="text-box">
+                    <h2>DAY 3</h2>
+                    <small>July 2</small>
+                    <p>a book or other written or printed work, regarded in terms of its content rather than its physical form.</p>
+                </div>
+            </div>
+            <div class="timeline-container right-container">
+                <img src="../public/images/silver.png" >
+                <div class="text-box">
+                    <h2>DAY 4</h2>
+                    <small>July 3</small>
+                    <p>a book or other written or printed work, regarded in terms of its content rather than its physical form.</p>
+                </div>
+            </div>
+        </div>
         <div class="merch">Gear up with Style and Purpose</div>
+         <!-- book section -->
+  <section class="book_section layout_padding">
+    <div class="container">
+      <div class="heading_container">
+        <h2>
+          Ask Questions
+        </h2>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form_container">
+            <form action="">
+              <div>
+                <input type="text" class="form-control" placeholder="Your Name" />
+              </div>
+              <div>
+                <input type="text" class="form-control" placeholder="Phone Number" />
+              </div>
+              <div>
+                <input type="email" class="form-control" placeholder="Your Email" />
+              </div>
+              <div>
+                <input type="text" class="form-control" placeholder="Type Your Question" />
+              </div>
+              <div>
+                <input type="text" class="form-control" placeholder="Additional Information">
+              </div>
+              <div class="btn_box">
+                <button>
+                  Ask Now
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+         <div class="map_container ">
+            <div id="googleMap">
+                <iframe class="" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.7984671282056!2d79.9703695739774!3d6.914682818496007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae256db1a6771c5%3A0x2c63e344ab9a7536!2sSri%20Lanka%20Institute%20of%20Information%20Technology!5e0!3m2!1sen!2slk!4v1714330400281!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+  </section>
+  <!-- end book section -->
         <div class="contact">contact us</div>
         <div class="card-container">
             <div class="card">
