--- a/views/index scratch 2.html
+++ b/views/index scratch 2.html
@@ -30,7 +30,7 @@
                 <img src="../public/images/silver.png" >
                 <div class="text-box">
                     <h2>DAY 1</h2>
-                    <small>May 31</small>
+                    <small>May31</small>
                     <p>a book or other written or printed work, regarded in terms of its content rather than its physical form.</p>
                 </div>
             </div>
