--- a/public/style scratch 2.css
+++ b/public/style scratch 2.css
@@ -82,45 +82,82 @@ body {
     height: 600px;
 }
 
-.timeline {
-    color: #000000;
-    text-align: center;
-    text-transform: uppercase;
-    font-family: sans-serif;
-    font-size: 10px;
-    font-weight: bold;
-    height: auto;
-    max-width: 1200px;
-    margin: 100px auto;
-    position: relative;
+/* ------------------------------------timeline---------------------------- */
+
+.timeline * {
+    margin: 0;
+    padding: 0;
+    font-family: Poppins;
+    box-sizing: border-box;
+    z-index: 1;
 }
 
-.timeline-container {
+.timeline {
+    /* container for timeline */
+    background: #2e364a;
+}
+
+.timeline-frame {
+    position: relative;
+    max-width: 1200px;
+    margin: 100px auto;
+}
+.container {
     padding: 10px 50px;
     position: relative;
     width: 50%;
-    background: rgba(0, 0, 0, 0.3);
-    border: solid blue;
+    /* background: rgba(0, 0, 0, 0.3); */
+
+    animation: movedown 1s linear forwards;
+    opacity: 0;
+}
+
+@keyframes movedown {
+    0% {
+        opacity: 1;
+        transform: translateY(-30px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+/* .container:nth-child(1) {
+    animation-delay: 0s;
+} */
+.container:nth-child(2) {
+    animation-delay: 1s;
+}
+.container:nth-child(3) {
+    animation-delay: 2s;
+}
+.container:nth-child(4) {
+    animation-delay: 3s;
+}
+.container:nth-child(5) {
+    animation-delay: 4s;
+}
+.container:nth-child(6) {
+    animation-delay: 5s;
 }
 
 .text-box {
     padding: 20px 30px;
-    background: #ffffff;
+    background: #fff;
     position: relative;
     border-radius: 6px;
     font-size: 15px;
-    border: solid red;
 }
 
 .left-container {
     left: 0;
 }
-
 .right-container {
     left: 50%;
 }
 
-.timeline-container img {
+.container img {
     position: absolute;
     width: 40px;
     border-radius: 50%;
@@ -133,17 +170,99 @@ body {
     left: -20px;
 }
 
-.timeline::after {
+.timeline-frame::after {
     content: "";
     position: absolute;
     width: 6px;
     height: 100%;
-    background: #ffffff;
+    background: #fff;
     top: 0;
     left: 50%;
     margin-left: -3px;
     z-index: -1;
+    animation: moveline 6s linear forwards;
 }
+
+@keyframes moveline {
+    0% {
+        height: 0;
+    }
+    100% {
+        height: 100%;
+    }
+}
+
+.text-box h2 {
+    font-weight: 600;
+}
+
+.text-box small {
+    display: inline-block;
+    margin-bottom: 15px;
+}
+
+.left-container-arrow {
+    height: 0;
+    width: 0;
+    position: absolute;
+    top: 28px;
+    z-index: 2;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 15px solid #fff;
+    right: -15px;
+}
+
+.right-container-arrow {
+    height: 0;
+    width: 0;
+    position: absolute;
+    top: 28px;
+    z-index: 2;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-right: 15px solid #fff;
+    left: -15px;
+}
+
+@media screen and (max-width: 600px) {
+    .timeline-frame {
+        margin: 50px auto;
+    }
+    .timeline-frame::after {
+        left: 31px;
+    }
+    .container {
+        width: 100%;
+        padding-left: 80px;
+        padding-right: 25px;
+    }
+    .text-box {
+        font-size: 13px;
+    }
+    .text-box small {
+        margin-bottom: 10px;
+    }
+    .right-container {
+        left: 0;
+    }
+    .left-container img,
+    .right-container img {
+        left: 10px;
+    }
+
+    .left-container-arrow,
+    .right-container-arrow {
+        border-right: 15px solid #fff;
+        border-left: 0;
+        left: -15px;
+    }
+}
+
+/*--------------------*/
+
+/*----------merch------------*/
+
 .merch {
     color: #ffee00;
     text-align: center;
