--- a/views/index scratch 2.html
+++ b/views/index scratch 2.html
@@ -5,8 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>IntelliCon 2.0</title>
         <link rel="stylesheet" href="../public/style scratch 2.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
+        <!-- ---------------------------------------------------------------------------------------------------- -->
         <div class="header">
             <div class="header-logo">
                 <a class="navbar-brand" href="index.html">
@@ -25,85 +32,155 @@
             </div>
         </div>
         <div class="content"></div>
-        <div class="timeline">timeline 2.0
-            <div class="timeline-container left-container">
-                <img src="../public/images/silver.png" >
-                <div class="text-box">
-                    <h2>DAY 1</h2>
-                    <small>May31</small>
-                    <p>a book or other written or printed work, regarded in terms of its content rather than its physical form.</p>
+
+        <!-- ---------------------------------------------------------------------------------------------------- -->
+
+        <div class="timeline">
+            <div>-------------------------timeline</div>
+            <div class="timeline-frame">
+                <div class="container left-container">
+                    <img src="../public/images/google.png" />
+                    <div class="text-box">
+                        <h2>Lorem ipsum</h2>
+                        <small>Lorem ipsum</small>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Debitis tempore velit voluptatibus corporis?
+                            Architecto quos ipsam odio debitis corrupti
+                            voluptate dignissimos,
+                        </p>
+                        <span class="left-container-arrow"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="timeline-container right-container">
-                <img src="../public/images/silver.png" >
-                <div class="text-box">
-                    <h2>DAY 2</h2>
-                    <small>July 1</small>
-                    <p>a book or other written or printed work, regarded in terms of its content rather than its physical form.</p>
+                <div class="container right-container">
+                    <img src="../public/images/amazon.png" />
+                    <div class="text-box">
+                        <h2>Lorem ipsum</h2>
+                        <small>Lorem ipsum</small>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Debitis tempore velit voluptatibus corporis?
+                            Architecto quos ipsam odio debitis corrupti
+                            voluptate dignissimos,
+                        </p>
+                        <span class="right-container-arrow"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="timeline-container left-container">
-                <img src="../public/images/silver.png" >
-                <div class="text-box">
-                    <h2>DAY 3</h2>
-                    <small>July 2</small>
-                    <p>a book or other written or printed work, regarded in terms of its content rather than its physical form.</p>
+                <div class="container left-container">
+                    <img src="../public/images/tesla.png" />
+                    <div class="text-box">
+                        <h2>Lorem ipsum</h2>
+                        <small>Lorem ipsum</small>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Debitis tempore velit voluptatibus corporis?
+                            Architecto quos ipsam odio debitis corrupti
+                            voluptate dignissimos,
+                        </p>
+                        <span class="left-container-arrow"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="timeline-container right-container">
-                <img src="../public/images/silver.png" >
-                <div class="text-box">
-                    <h2>DAY 4</h2>
-                    <small>July 3</small>
-                    <p>a book or other written or printed work, regarded in terms of its content rather than its physical form.</p>
+                <div class="container right-container">
+                    <img src="../public/images/toyota.png" />
+                    <div class="text-box">
+                        <h2>Lorem ipsum</h2>
+                        <small>Lorem ipsum</small>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Debitis tempore velit voluptatibus corporis?
+                            Architecto quos ipsam odio debitis corrupti
+                            voluptate dignissimos,
+                        </p>
+                        <span class="right-container-arrow"></span>
+                    </div>
+                </div>
+                <div class="container left-container">
+                    <img src="../public/images/flipkart.png" />
+                    <div class="text-box">
+                        <h2>Lorem ipsum</h2>
+                        <small>Lorem ipsum</small>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Debitis tempore velit voluptatibus corporis?
+                            Architecto quos ipsam odio debitis corrupti
+                            voluptate dignissimos,
+                        </p>
+                        <span class="left-container-arrow"></span>
+                    </div>
+                </div>
+                <div class="container right-container">
+                    <img src="../public/images/youtube.png" />
+                    <div class="text-box">
+                        <h2>Lorem ipsum</h2>
+                        <small>Lorem ipsum</small>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Debitis tempore velit voluptatibus corporis?
+                            Architecto quos ipsam odio debitis corrupti
+                            voluptate dignissimos,
+                        </p>
+                        <span class="right-container-arrow"></span>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <!-- ---------------------------------------------------------------------------------------------------- -->
+
         <div class="merch">Gear up with Style and Purpose</div>
+
+        <!-- ---------------------------------------------------------------------------------------------------- -->
+
          <!-- book section -->
-  <section class="book_section layout_padding">
-    <div class="container">
-      <div class="heading_container">
-        <h2>
-          Ask Questions
-        </h2>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form_container">
-            <form action="">
-              <div>
-                <input type="text" class="form-control" placeholder="Your Name" />
-              </div>
-              <div>
-                <input type="text" class="form-control" placeholder="Phone Number" />
-              </div>
-              <div>
-                <input type="email" class="form-control" placeholder="Your Email" />
-              </div>
-              <div>
-                <input type="text" class="form-control" placeholder="Type Your Question" />
-              </div>
-              <div>
-                <input type="text" class="form-control" placeholder="Additional Information">
-              </div>
-              <div class="btn_box">
-                <button>
-                  Ask Now
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-         <div class="map_container ">
-            <div id="googleMap">
-                <iframe class="" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.7984671282056!2d79.9703695739774!3d6.914682818496007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae256db1a6771c5%3A0x2c63e344ab9a7536!2sSri%20Lanka%20Institute%20of%20Information%20Technology!5e0!3m2!1sen!2slk!4v1714330400281!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <section class="book_section layout_padding">
+            <div class="container">
+            <div class="heading_container">
+                <h2>
+                Ask Questions
+                </h2>
             </div>
-        </div>
-    </div>
-  </section>
-  <!-- end book section -->
+            <div class="row">
+                <div class="col-md-6">
+                <div class="form_container">
+                    <form action="">
+                    <div>
+                        <input type="text" class="form-control" placeholder="Your Name" />
+                    </div>
+                    <div>
+                        <input type="text" class="form-control" placeholder="Phone Number" />
+                    </div>
+                    <div>
+                        <input type="email" class="form-control" placeholder="Your Email" />
+                    </div>
+                    <div>
+                        <input type="text" class="form-control" placeholder="Type Your Question" />
+                    </div>
+                    <div>
+                        <input type="text" class="form-control" placeholder="Additional Information">
+                    </div>
+                    <div class="btn_box">
+                        <button>
+                        Ask Now
+                        </button>
+                    </div>
+                    </form>
+                </div>
+                </div>
+                <div class="map_container ">
+                    <div id="googleMap">
+                        <iframe class="" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.7984671282056!2d79.9703695739774!3d6.914682818496007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae256db1a6771c5%3A0x2c63e344ab9a7536!2sSri%20Lanka%20Institute%20of%20Information%20Technology!5e0!3m2!1sen!2slk!4v1714330400281!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end book section -->
+
+        <!-- ---------------------------------------------------------------------------------------------------- -->
+
         <div class="contact">contact us</div>
+
+        <!-- ---------------------------------------------------------------------------------------------------- -->
+
         <div class="card-container">
             <div class="card">
                 <img src="../public/images/man1.jpeg" />
@@ -143,7 +220,15 @@
                 </p>
             </div>
         </div>
+
+        <!-- ---------------------------------------------------------------------------------------------------- -->
+
         <div class="partners">partners</div>
+
+        <!-- ---------------------------------------------------------------------------------------------------- -->
+
         <div class="AIESEC">AIESEC IN SLIIT</div>
+
+        <!-- ---------------------------------------------------------------------------------------------------- -->
     </body>
 </html>
