rewrote FAQ section

--- a/views/index scratch 2.html
+++ b/views/index scratch 2.html
@@ -131,49 +131,29 @@
 
         <!-- ---------------------------------------------------------------------------------------------------- -->
 
-         <!-- book section -->
-        <section class="book_section layout_padding">
-            <div class="container">
-            <div class="heading_container">
-                <h2>
-                Ask Questions
-                </h2>
+        <div class="faq">
+            
+            <div class="faq-form-container">
+                <form class="faq-form" action="/faq" method="POST">
+                    <div class="faq-form-div">
+                        <div>
+                            <h2 style="color: white;">Ask Questions</h2>
+                        </div>
+                        <input type="text" class="faq-input" placeholder="Your Name" /><br>
+                        <input type="text" class="faq-input" placeholder="Phone Number" /><br>
+                        <input type="email" class="faq-input" placeholder="Your Email" /><br>
+                        <input type="text" class="faq-input" placeholder="Type Your Question" /><br>
+                        <input type="text" class="faq-input" placeholder="Additional Information"><br>
+                        <div class="faq-btn-container">
+                            <button type="submit" class="faq-btn">ASK NOW</button>
+                        </div>
+                    </div>
+                </form>
+            </div> 
+            <div class="location-container">
+                <iframe class="location-frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.7984671282056!2d79.9703695739774!3d6.914682818496007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae256db1a6771c5%3A0x2c63e344ab9a7536!2sSri%20Lanka%20Institute%20of%20Information%20Technology!5e0!3m2!1sen!2slk!4v1714330400281!5m2!1sen!2slk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="row">
-                <div class="col-md-6">
-                <div class="form_container">
-                    <form action="">
-                    <div>
-                        <input type="text" class="form-control" placeholder="Your Name" />
-                    </div>
-                    <div>
-                        <input type="text" class="form-control" placeholder="Phone Number" />
-                    </div>
-                    <div>
-                        <input type="email" class="form-control" placeholder="Your Email" />
-                    </div>
-                    <div>
-                        <input type="text" class="form-control" placeholder="Type Your Question" />
-                    </div>
-                    <div>
-                        <input type="text" class="form-control" placeholder="Additional Information">
-                    </div>
-                    <div class="btn_box">
-                        <button>
-                        Ask Now
-                        </button>
-                    </div>
-                    </form>
-                </div>
-                </div>
-                <div class="map_container ">
-                    <div id="googleMap">
-                        <iframe class="" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.7984671282056!2d79.9703695739774!3d6.914682818496007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae256db1a6771c5%3A0x2c63e344ab9a7536!2sSri%20Lanka%20Institute%20of%20Information%20Technology!5e0!3m2!1sen!2slk!4v1714330400281!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- end book section -->
+        </div>
 
         <!-- ---------------------------------------------------------------------------------------------------- -->
 
