--- a/public/style scratch 2.css
+++ b/public/style scratch 2.css
@@ -272,92 +272,80 @@ body {
     font-weight: bold;
     height: 600px;
 }
+/*--------------------*/
 
-.book_section {
-    position: relative;
+/*------------- faq -----------------*/
+
+.faq {
+    display: flex;
+}
+.faq-form-container {
+    width: 50%;
+    display: inline-flex;
+}
+.faq-form {
     width: 100%;
-    left: 30px;
-    right: 30px;
-    height: auto;
+    display: flex;
+    justify-content: center;
 }
 
-.book_section .heading_container {
-    margin-bottom: 25px;
-    color: #ffffff;
-    width: 45%;
+.faq-form-div {
+    width: 80%;
 }
 
-.book_section .form_container .form-control {
-    width: 45%;
-    border: none;
-    height: 50px;
+.location-container {
+    width: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.location-frame {
+    margin-top: 10px;
+    border-radius: 10px;
+    height: 368px;
+    width: 80%;
+}
+
+.faq-input {
+    color: white;
+    background-color: black;
+    border: solid white 1px;
+    border-radius: 6px;
+    width: 95%;
+    height: 40px;
     margin-bottom: 25px;
-    padding-left: 25px;
-    border: 1px solid #999;
+    padding: 6px 20px;
+}
+
+.faq-input::placeholder {
+    color: white;
+}
+
+.faq-input:focus {
     outline: none;
-    color: #ffffff;
-    background-color: #000000;
-    border-radius: 5px;
-    outline: gray;
-    -webkit-box-shadow: none;
-    box-shadow: none;
 }
 
-.book_section .form_container .form-control::-webkit-input-placeholder {
-    color: #fffefe;
-}
-
-.book_section .form_container .form-control:-ms-input-placeholder {
-    color: #ffffff;
-}
-
-.book_section .form_container .form-control::-ms-input-placeholder {
-    color: #ffffff;
-}
-
-.book_section .form_container .form-control::placeholder {
-    color: #ffffff;
-}
-
-.book_section .form_container .nice-select .current {
-    font-size: 16px;
-}
-
-.book_section .form_container button {
-    margin-top: 15px;
+.faq-btn {
     border: none;
-    text-transform: uppercase;
-    display: inline-block;
-    padding: 10px 55px;
     background-color: #ffbe33;
-    color: #ffffff;
-    border-radius: 45px;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-    border: none;
+    color: white;
+    width: 170px;
+    height: 36px;
+    border-radius: 20px;
+    transition: background-color 0.3s;
+}
+
+.faq-btn:hover {
+    background-color: #e69c00;
     cursor: pointer;
 }
 
-.book_section .form_container button:hover {
-    background-color: #e69c00;
+.faq h2 {
+    margin-bottom: 25px;
 }
 
-.book_section .map_container {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    width: calc(50%-10px); /* Adjust as needed */
-    height: 380px; /* Adjust as needed */
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.book_section .map_container #googleMap {
-    height: 100%;
-    min-height: 100%;
-    width: 100%;
-}
-
+/* ----------------------------------- */
 .contact {
     padding-top: 30px;
     color: #ffee00;
