Update index scratch 2.html

--- a/views/index scratch 2.html
+++ b/views/index scratch 2.html
@@ -139,11 +139,11 @@
                         <div>
                             <h2 style="color: white;">Ask Questions</h2>
                         </div>
-                        <input type="text" class="faq-input" placeholder="Your Name" /><br>
-                        <input type="text" class="faq-input" placeholder="Phone Number" /><br>
-                        <input type="email" class="faq-input" placeholder="Your Email" /><br>
-                        <input type="text" class="faq-input" placeholder="Type Your Question" /><br>
-                        <input type="text" class="faq-input" placeholder="Additional Information"><br>
+                        <input type="text" name="name" class="faq-input" placeholder="Your Name" /><br>
+                        <input type="text" name="number" class="faq-input" placeholder="Phone Number" /><br>
+                        <input type="email" name="email" class="faq-input" placeholder="Your Email" /><br>
+                        <input type="text" name="qstr" class="faq-input" placeholder="Type Your Question" /><br>
+                        <input type="text" name="additional" class="faq-input" placeholder="Additional Information"><br>
                         <div class="faq-btn-container">
                             <button type="submit" class="faq-btn">ASK NOW</button>
                         </div>
