--- a/views/data.hbs
+++ b/views/data.hbs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="/data.css" />
+        <link rel="stylesheet" href="/css/adm-styles-data.css" />
         <style>
             .user-card {
                 border: solid 1px;
