--- a/public/css/user-styles-index.css
+++ b/public/css/user-styles-index.css
@@ -273,9 +273,7 @@ body {
     height: 600px;
 }
 
-/*=============== GOOGLE FONTS ===============*/
-
-/*=============== VARIABLES CSS ===============*/
+/*=============== vars ===============*/
 :root {
     /*========== Colors ==========*/
     /*Color mode HSL(hue, saturation, lightness)*/
@@ -312,26 +310,7 @@ body {
     }
 }
 
-/*=============== BASE ===============*/
-/* * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-} 
-
-body {
-    font-family: var(--body-font);
-    font-size: var(--normal-font-size);
-    background-color: var(--first-color);
-    color: var(--black-color);
-}
-
-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-*/
+/*=============== rest ===============*/
 
 .merch > * {
     box-sizing: border-box;
@@ -350,7 +329,6 @@ img {
     height: auto;
 }
 
-/*=============== REUSABLE CSS CLASSES ===============*/
 .container-for-merch {
     max-width: 1120px;
     margin-inline: 1.5rem;
@@ -359,8 +337,6 @@ img {
 .merch-main {
     overflow: hidden;
 }
-
-/*=============== HOME ===============*/
 
 .merch-container {
     /* height: 100vh; */
@@ -442,7 +418,8 @@ img {
 .swiper-button-next {
     right: calc(50% - 8rem);
 }
-/*=============== BREAKPOINTS ===============*/
+
+/*=============== breakpoints ===============*/
 /* For small devices */
 @media screen and (max-width: 330px) {
     .container-for-merch {
