--- a/views/index.html
+++ b/views/index.html
@@ -5,27 +5,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>IntelliCon 2.0</title>
 
-        <!--=============== FAVICON ===============-->
-        <link
-            rel="shortcut icon"
-            href="assets/img/favicon.png"
-            type="image/x-icon"
-        />
-
-        <!--=============== REMIXICONS ===============-->
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.0.1/remixicon.min.css"
-        />
+        <!-- ------------------------------ styles + css modules ------------------------------ -->
 
         <link rel="stylesheet" href="../public/css/swiper-bundle.min.css" />
         <link rel="stylesheet" href="../public/css/user-styles-index.css" />
 
+        <!-- ------------------------------ fonts ------------------------------ -->
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Smooch&display=swap" rel="stylesheet">
-        
+       
+        <!-- ------------------------------ remixicons ------------------------------ -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.0.1/remixicon.min.css"
+        />
+ 
     </head>
     <body>
         <!-- ---------------------------------------------------------------------------------------------------- -->
@@ -142,7 +138,6 @@
 
         <!-- ---------------------------------------------------------------------------------------------------- -->
 
-        
         <div class="merch">
             <main class="merch-main">
                 <section>
@@ -301,6 +296,7 @@
 
         <!-- ---------------------------------------------------------------------------------------------------- -->
         
+        <!-- ------------------------------ main + scrollrevealjs + swiperjs ------------------------------ -->
         <script src="../public/js/scrollreveal.min.js"></script>
         <script src="../public/js/swiper-bundle.min.js"></script>
         <script src="../public/js/main.js"></script>
