--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
                 <button class="header-register-btn">Register Now</button>
             </div>
         </div>
-        <div class="content"></div>
+        <div class="content" id="particles-js"></div>
 
         <!-- ---------------------------------------------------------------------------------------------------- -->
 
@@ -299,6 +299,7 @@
         <!-- ------------------------------ main + scrollrevealjs + swiperjs ------------------------------ -->
         <script src="../public/js/scrollreveal.min.js"></script>
         <script src="../public/js/swiper-bundle.min.js"></script>
+        <script src="../public/js/particles.min.js" ></script>
         <script src="../public/js/main.js"></script>
     </body>
 </html>
